# CropFarmBot

./: .gitmodules  CMakeLists.txt
Sources/: CMakeLists.txt
Sources/includes/: Config.hpp  CropFarmBehaviour.hpp  CropFarmTasks.hpp
Sources/src/: Config.cpp  CropFarmBehaviour.cpp  CropFarmTasks.cpp  main.cpp
